[package]
name = "rillio"
version = "0.0.1"
edition = "2021"
description = "Pluggable, feature-aware database façade with Rust core, CLI, and Python bindings"
license = "MIT"
readme = "README.md"
repository = "https://github.com/suhailphotos/rillio"
homepage = "https://github.com/suhailphotos/rillio"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde_json = "1.0.145"
